--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ document.querySelector('button').addEventListener('click', function(){
                <p class="payload-description"></p>
                     <p class="payload-author"></p>
                 </a>
-                <a class="btn mx-auto hidden-btn" id="payload-7" tabindex="0" data-info="FPKG enabler">
+                <a class="btn mx-auto hidden-btn" id="payload-7" tabindex="0" data-info="Uses port 9021, Persistent network elf loader">
                     <p class="payload-name"></p>
                     <p class="payload-description"></p>
                     <p class="payload-author"></p>
