--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html manifest="cache.appcache">
 
-<title>🟡PS5 XPLOIT🟡 3.xx - 4.xx [cache-Offline] </title>
+<title>🟡 XPLOIT🟡 3.xx - 4.xx      </title>
 <head><meta http-equiv=”Content-Type” content=”text/html; charset=UTF-8″ />
  <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="main.css"><script defer src="L2.js"></script>    
